# garch-volatility-suite

./: .gitignore  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: custom.css
core/: data_handler.py  hybrid_models.py  models.py  options.py  utils.py
pages/: 1_Standard_Volatility_Models.py  2_Hybrid_GARCH-GRU_Model.py  3_Backtesting_&_VaR.py  4_Methodology.py
tests/: test_modules.py
